--- a/style.css
+++ b/style.css
@@ -35,6 +35,8 @@ body {
   border: none;
   width: 100%;
   background: white;
+  color:rgb(8, 77, 8);
+  font-weight: bold;
 }
 .label:hover {
     background: rgb(175, 245, 175);
